<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/inscriptionText"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/connexionTextZise"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/Coral" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/inscription_shape">


        <EditText
            android:id="@+id/inputNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/inputNom"
            android:textSize="@dimen/inputSize"
            android:drawableStart="@drawable/account"
            android:drawablePadding="8dp"
            android:inputType="textPersonName"
            android:autofillHints="text" />

        <EditText
            android:id="@+id/inputPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputPrenom"
            android:textSize="@dimen/inputSize"
            android:drawableStart="@drawable/account"
            android:drawablePadding="5dp"
            android:inputType="textPersonName"
            android:autofillHints="text" />

        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputPhone"
            android:textSize="@dimen/inputSize"
            android:autofillHints="phone"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="8dp"
            android:inputType="phone" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputEmail"
            android:textSize="@dimen/inputSize"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/email"
            android:drawablePadding="8dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/inputLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputLogin"
            android:textSize="@dimen/inputSize"
            android:autofillHints="login"
            android:drawableStart="@drawable/baseline_login_24"
            android:drawablePadding="8dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/inputPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputPwd"
            android:textSize="@dimen/inputSize"
            android:drawableStart="@drawable/key"
            android:drawablePadding="8dp"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/inputConfPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputPwdBis"
            android:textSize="@dimen/inputSize"
            android:drawableStart="@drawable/key"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            android:autofillHints="textPassword"/>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_gravity="center">
           <Button
               android:id="@+id/buttonSubmit"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/valider"
               android:layout_marginBottom="10dp"
               android:layout_marginStart="20dp"
               tools:ignore="ButtonStyle" />

           <Button
               android:id="@+id/buttonAnnuler"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/annuler"
               android:layout_marginBottom="10dp"
               android:layout_marginStart="40dp"
               tools:ignore="ButtonStyle" />
       </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/Coral" />

</LinearLayout>