<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".HomeFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:text="@string/menu"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="120dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile"
                android:layout_gravity="center"
                android:importantForAccessibility="no"/>

            <TextView
                android:id="@+id/nomConducteur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/defaultText"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/conducteur"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/offre_cov_shape"
        android:text="@string/proposition"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/carteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/offre_cov_shape"
        android:text="@string/offres_sur_la_carte"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />


    <Button
        android:id="@+id/deconnexionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/deconnexion"/>



    <Button
        android:id="@+id/covoiturageList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="Voir la liste des covoiturage"/>


</LinearLayout>



</RelativeLayout>