<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ValidationOffreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/validation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginStart="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/offreValidation"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/offreEnregistre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/offreEnregistre"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/courrierInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/confirmationInfo"
            android:layout_gravity="center"/>



        <Button
            android:id="@+id/validationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/ok"/>

    </LinearLayout>



</RelativeLayout>